--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+asgiref==1.1.2
+attrs==17.3.0
+autobahn==17.10.1
+Automat==0.6.0
+channels==1.1.8
+constantly==15.1.0
+daphne==1.3.0
 Django==1.11.7
-pkg-resources==0.0.0
+hyperlink==17.3.1
+incremental==17.5.0
 pytz==2017.3
+six==1.11.0
+Twisted==17.9.0
+txaio==2.8.2
+Unipath==1.1
+zope.interface==4.4.3
